# oop_laba_5_belyak_andrei

./: .gitignore  README.md
include/: memory_resource_reuse.hpp  stack.hpp
src/: CMakeLists.txt  main.cpp
tests/: test_memory_resource.cpp  test_stack.cpp
